--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -3,12 +3,12 @@
     "plusBeta": false,
     "isCreatingSolution": true,
     "version": "1.15.2",
-    "libraryName": "abm-tipo-documentos",
+    "libraryName": "BaseEstructura",
     "libraryId": "379887e3-737c-4161-aa3f-745880727d37",
     "environment": "spo",
     "packageManager": "npm",
-    "solutionName": "abm-tipo-documentos",
-    "solutionShortDescription": "abm-tipo-documentos description",
+    "solutionName": "BaseEstructura",
+    "solutionShortDescription": "BaseEstructura description",
     "skipFeatureDeployment": true,
     "isDomainIsolated": false,
     "componentType": "webpart"
